[package]
name              = "worker"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow             = { version = "1.0.86" }
candle-core        = { version = "0.5.0" }
candle-datasets    = { version = "0.5.0" }
candle-nn          = { version = "0.5.0" }
clap               = { version = "4.5.4", features = ["derive"] }
prost              = { version = "0.12.6" }
safetensors        = { version = "0.4.3" }
tokio              = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic              = { version = "0.11.0" }
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

[build-dependencies]
protoc-fetcher = { version = "0.1.1" }
tonic-build    = { version = "0.11.0" }
